Michael Muldowney is a sidekick

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,11 +16,14 @@ opencv-contrib-python==4.10.0.84
 opencv-python==4.10.0.84
 opt-einsum==3.3.0
 packaging==24.1
+pandas==2.2.2
 pillow==10.3.0
 protobuf==4.25.3
 pycparser==2.22
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+pytz==2024.1
 scipy==1.14.0
 six==1.16.0
 sounddevice==0.4.7
+tzdata==2024.1
